# cpp-20-2025-09-08

./: CMakeLists.txt  README.md
_exercises/ex-compare/: comparisons.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-ranges/: ranges.cpp
compare/: comparisons.cpp  integer_comparisons.cpp
compile-time-programming/: compile_time_programming.cpp
concepts/: concept_subsumation.cpp  concepts_and_constraints.cpp  type_traits.cpp
core-features/: core_features.cpp
modules/modules-1/: CMakeLists.txt
modules/modules-2/: CMakeLists.txt
ranges/: ranges_and_views.cpp
stdexec/: CMakeLists.txt  senders_receivers_tests.cpp
stdlib-features/: std_lib_cpp20.cpp
templates/: templates.cpp
